k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hydra-api-service
spec:
  type: LoadBalancer
  selector:
    app: hydra-deployment
  ports:
  - port: 80
    targetPort: 3100
